--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import { SiReact } from "@icons-pack/react-simple-icons";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -61,6 +62,7 @@ import Card from "../components/Card.astro";
         body="Come say hi to our amazing Discord community. ❤️"
       />
     </ul>
+    <SiReact />
   </main>
 </Layout>
 
