--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
-import { SiReact } from "@icons-pack/react-simple-icons";
+import { SiReact, SiReactHex } from "@icons-pack/react-simple-icons";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -62,7 +62,7 @@ import { SiReact } from "@icons-pack/react-simple-icons";
         body="Come say hi to our amazing Discord community. ❤️"
       />
     </ul>
-    <SiReact />
+    <SiReact color={SiReactHex} />
   </main>
 </Layout>
 
