--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
-import { SiReact, SiReactHex } from "@icons-pack/react-simple-icons";
+import {
+  SiPython,
+  SiPythonHex,
+  SiReact,
+  SiReactHex,
+  SiVuedotjs,
+  SiVuedotjsHex,
+} from "@icons-pack/react-simple-icons";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -63,6 +70,8 @@ import { SiReact, SiReactHex } from "@icons-pack/react-simple-icons";
       />
     </ul>
     <SiReact color={SiReactHex} />
+    <SiVuedotjs color={SiVuedotjsHex} />
+    <SiPython color={SiPythonHex} />
   </main>
 </Layout>
 
