--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import {
   SiVuedotjs,
   SiVuedotjsHex,
 } from "@icons-pack/react-simple-icons";
+import { ChevronRightIcon, ClipboardCopy } from "lucide-react";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -72,6 +73,9 @@ import {
     <SiReact color={SiReactHex} />
     <SiVuedotjs color={SiVuedotjsHex} />
     <SiPython color={SiPythonHex} />
+
+    <ChevronRightIcon />
+    <ClipboardCopy />
   </main>
 </Layout>
 
