--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
-import {
-  SiPython,
-  SiPythonHex,
-  SiReact,
-  SiReactHex,
-  SiVuedotjs,
-  SiVuedotjsHex,
-} from "@icons-pack/react-simple-icons";
-import { ChevronRightIcon, ClipboardCopy } from "lucide-react";
+import { SiReact } from "@icons-pack/react-simple-icons";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -70,12 +62,7 @@ import { ChevronRightIcon, ClipboardCopy } from "lucide-react";
         body="Come say hi to our amazing Discord community. ❤️"
       />
     </ul>
-    <SiReact color={SiReactHex} />
-    <SiVuedotjs color={SiVuedotjsHex} />
-    <SiPython color={SiPythonHex} />
-
-    <ChevronRightIcon />
-    <ClipboardCopy />
+    <SiReact />
   </main>
 </Layout>
 
